# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  connection.py  database.py  parser.py  validate.py
page_analyzer/templates/: 404.html  index.html  layout.html  url.html  urls.html
tests/: fake_client.py  test_database.py  test_parser.py  test_validator.py
tests/fixtures/: parser_test1.html  parser_test2.html
